name:               Lambda
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Stefan Haller
maintainer:         haliner@gmail.com
build-type:         Simple
cabal-version:      >=1.10

executable Lambda
    main-is:
        Main.hs

    other-modules:
        Lambda

    build-depends:
        base                 >= 4.6,
        containers           >= 0.5,
        hashable             >= 1.2,
        parsec               >= 3.1,
        unordered-containers >= 0.2,
        transformers         >= 0.3

    hs-source-dirs:
        src

    default-language:
        Haskell2010

-- vim: set ts=4 sts=4 sw=4 et:
